force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Shop_Target__c/Plant_Shop_Target__c.object-meta.xml
<CustomObject>
    <description>Saves the valid draft data for the adjustment made on a target.</description>
    <label>Plant Shop Target</label>
    <nameField>
        <displayFormat>PST-{000000}</displayFormat>
        <label>Plant Shop Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Shop Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>