force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Shop_Target__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <label>Driver</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>