force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Shop_Target__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Target</label>
    <referenceTo>GWB_Year__c</referenceTo>
    <relationshipLabel>Plant Shop Targets</relationshipLabel>
    <relationshipName>Plant_Position_Adjustments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>