force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Shop_Target__c/fields/Total_Changes_Made__c.field-meta.xml
<CustomField>
    <fullName>Total_Changes_Made__c</fullName>
    <label>Total Changes Made</label>
    <summarizedField>Plant_Shop_Target_Item__c.Adjustment__c</summarizedField>
    <summaryForeignKey>Plant_Shop_Target_Item__c.Plant_Shop_Target__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>