force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Shop_Target__c/fields/Total_Changes_Needed__c.field-meta.xml
<CustomField>
    <fullName>Total_Changes_Needed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Changes Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>